--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 		.text_box {
 			box-sizing: border-box;
 			display: block;
+			line-height: 0;
+			padding: 50% 0;
 			text-align: center;
 			font-size: 3vw;
 			width: 12.5vw;
